--- a/app/src/main/res/layout/fragment_gripper_controls.xml
+++ b/app/src/main/res/layout/fragment_gripper_controls.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.controls.ControlsFragment">
+    tools:context=".ui.gripper_controls.GripperControlsFragment">
 
 
     <ImageButton
