--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,8 +13,9 @@
 
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.wally.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_controls" />
+        android:id="@+id/navigation_settings"
+        android:name="com.example.wally.ui.settings.SettingsFragment"
+        android:label="@string/title_settings"
+        tools:layout="@layout/fragment_settings" />
+
 </navigation>
