--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/homeFragment"
         android:title="Home"
         android:icon="@drawable/ic_baseline_format_list_bulleted_24"
         />
     <item
-        android:id="@+id/navigation_settings"
+        android:id="@+id/settingsFragment"
         android:title="Settings"
         android:icon="@drawable/ic_baseline_settings_24"/>
 </menu>
