--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,17 +3,48 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
-
+    app:startDestination="@id/homeFragment">
     <fragment
-        android:id="@+id/navigation_home"
+        android:id="@+id/homeFragment"
         android:name="com.example.wally.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
-
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/createTaskAction"
+            app:destination="@id/createTaskDialogFragment" />
+    </fragment>
     <fragment
-        android:id="@+id/navigation_settings"
+        android:id="@+id/settingsFragment"
         android:name="com.example.wally.ui.settings.SettingsFragment"
         android:label="@string/title_settings" />
-
+    <dialog
+        android:id="@+id/createTaskDialogFragment"
+        android:name="com.example.wally.ui.tasks.CreateTaskDialogFragment"
+        android:label="CreateTaskDialogFragment" >
+        <action
+            android:id="@+id/recordTaskAction"
+            app:destination="@id/recordTaskDriveFragment" />
+        <action
+            android:id="@+id/confirmTaskAction"
+            app:destination="@id/homeFragment" />
+    </dialog>
+    <fragment
+        android:id="@+id/recordTaskDriveFragment"
+        android:name="com.example.wally.ui.tasks.RecordTaskDriveFragment"
+        android:label="Record Drive">
+        <action
+            android:id="@+id/recordArmAction"
+            app:destination="@id/recordTaskArmFragment" />
+        <action
+            android:id="@+id/confirmTaskRecordingAction"
+            app:destination="@id/homeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/recordTaskArmFragment"
+        android:name="com.example.wally.ui.tasks.RecordTaskArmFragment"
+        android:label="Record Arm">
+        <action
+            android:id="@+id/confirmArmAction"
+            app:destination="@id/recordTaskDriveFragment" />
+    </fragment>
 </navigation>
