--- a/app/src/main/res/drawable/roundedbutton.xml
+++ b/app/src/main/res/drawable/roundedbutton.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="#75000000" />
-    <corners android:bottomRightRadius="100dp"
-        android:bottomLeftRadius="100dp"
-        android:topRightRadius="100dp"
-        android:topLeftRadius="100dp"/>
-</shape>
+<ripple
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="?colorAccent">
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="#75000000" />
+            <corners android:bottomRightRadius="100dp"
+                android:bottomLeftRadius="100dp"
+                android:topRightRadius="100dp"
+                android:topLeftRadius="100dp"/>
+        </shape>
+    </item>
+</ripple>
