--- a/app/src/main/res/layout/fragment_controls.xml
+++ b/app/src/main/res/layout/fragment_controls.xml
@@ -6,14 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".ui.controls.ControlsFragment">
 
-
     <ImageButton
         android:id="@+id/forwardButton"
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:layout_marginTop="12dp"
         android:background="@drawable/roundedbutton_lighter"
-        android:contentDescription="Up-facing button"
+        android:contentDescription="@string/up_facing_button"
         android:src="@drawable/ic_baseline_arrow_upward_24"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -35,7 +34,7 @@
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:background="@drawable/roundedbutton_lighter"
-        android:contentDescription="Down-facing button"
+        android:contentDescription="@string/down_facing_button"
         android:src="@drawable/ic_baseline_arrow_downward_24"
         app:layout_constraintTop_toBottomOf="@id/dpad"
         android:layout_marginTop="8dp"
@@ -47,7 +46,7 @@
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:background="@drawable/roundedbutton_lighter"
-        android:contentDescription="Right-facing button"
+        android:contentDescription="@string/right_facing_button"
         android:src="@drawable/ic_baseline_arrow_forward_24"
         app:layout_constraintLeft_toRightOf="@id/dpad"
         android:layout_marginLeft="8dp"
@@ -58,7 +57,7 @@
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:background="@drawable/roundedbutton_lighter"
-        android:contentDescription="Left-facing button"
+        android:contentDescription="@string/left_facing_button"
         android:src="@drawable/ic_baseline_arrow_back_24"
         app:layout_constraintRight_toLeftOf="@id/dpad"
         android:layout_marginRight="8dp"
@@ -72,7 +71,7 @@
         android:layout_marginBottom="30dp"
         android:layout_marginTop="60dp"
         android:background="@drawable/roundedbutton"
-        android:contentDescription="Rotate left button"
+        android:contentDescription="@string/rotate_left_button"
         android:rotation="-45"
         android:src="@drawable/ic_baseline_rotate_left_24"
         app:layout_constraintTop_toBottomOf="@id/backwardButton"
@@ -86,7 +85,7 @@
         android:layout_marginBottom="30dp"
         android:layout_marginTop="60dp"
         android:background="@drawable/roundedbutton"
-        android:contentDescription="Rotate right"
+        android:contentDescription="@string/rotate_right"
         android:rotation="45"
         android:src="@drawable/ic_baseline_rotate_right_24"
         app:layout_constraintTop_toBottomOf="@id/backwardButton"
