--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -7,8 +7,14 @@
         app:fragment="com.example.wally.ui.bluetooth.BluetoothFragment" />
 
     <Preference
-        app:key="controls"
-        app:title="Controls"
-        app:summary="Control Wally"
+        app:key="drive_control"
+        app:title="Drive Control"
+        app:summary="Move Wally"
         app:fragment="com.example.wally.ui.controls.ControlsFragment" />
+
+    <Preference
+        app:key="arm_control"
+        app:title="Arm Control"
+        app:summary="Move Wally's Arm"
+        app:fragment="com.example.wally.ui.gripper_controls.GripperControlsFragment" />
 </androidx.preference.PreferenceScreen>
