--- a/app/src/main/res/layout/fragment_gripper_controls.xml
+++ b/app/src/main/res/layout/fragment_gripper_controls.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.controls.ControlsFragment">
+    tools:context=".ui.gripper_controls.GripperControlsFragment">
 
 
     <ImageButton
@@ -12,60 +12,74 @@
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:background="@drawable/roundedbutton_lighter"
-        android:contentDescription="Down-facing button"
+        android:contentDescription="@string/down_facing_button"
         android:src="@drawable/ic_baseline_arrow_downward_24"
-        tools:layout_editor_absoluteX="172dp"
-        tools:layout_editor_absoluteY="246dp" />
+        app:layout_constraintTop_toBottomOf="@id/armDpad"
+        android:layout_marginTop="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <ImageButton
         android:id="@+id/armUpButton"
+        android:layout_marginTop="12dp"
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:background="@drawable/roundedbutton_lighter"
-        android:contentDescription="Up-facing button"
+        android:contentDescription="@string/up_facing_button"
         android:src="@drawable/ic_baseline_arrow_upward_24"
-        tools:layout_editor_absoluteX="172dp"
-        tools:layout_editor_absoluteY="30dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <ImageButton
         android:id="@+id/gripperRightButton"
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:background="@drawable/roundedbutton_lighter"
-        android:contentDescription="Right-facing button"
+        android:contentDescription="@string/right_facing_button"
         android:src="@drawable/ic_baseline_arrow_forward_24"
-        tools:layout_editor_absoluteX="280dp"
-        tools:layout_editor_absoluteY="140dp" />
+        app:layout_constraintLeft_toRightOf="@id/armDpad"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/armUpButton" />
 
     <ImageButton
         android:id="@+id/gripperLeftButton"
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:background="@drawable/roundedbutton_lighter"
-        android:contentDescription="Left-facing button"
+        android:contentDescription="@string/left_facing_button"
         android:src="@drawable/ic_baseline_arrow_back_24"
-        tools:layout_editor_absoluteX="60dp"
-        tools:layout_editor_absoluteY="140dp" />
+        app:layout_constraintRight_toLeftOf="@id/armDpad"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/armUpButton" />
 
     <ImageButton
         android:id="@+id/armForwardButton"
         android:layout_width="96dp"
         android:layout_height="96dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="60dp"
         android:background="@drawable/roundedbutton"
-        android:contentDescription="Towards button"
+        android:contentDescription="@string/towards_button"
         android:src="@drawable/ic_baseline_keyboard_double_arrow_up_24"
-        tools:layout_editor_absoluteX="289dp"
-        tools:layout_editor_absoluteY="527dp" />
+        app:layout_constraintTop_toBottomOf="@id/armDownButton"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageButton
         android:id="@+id/armBackwardButton"
         android:layout_width="96dp"
         android:layout_height="96dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="60dp"
         android:background="@drawable/roundedbutton"
-        android:contentDescription="Awaywards buttom"
+        android:contentDescription="@string/awaywards_button"
         android:src="@drawable/ic_baseline_keyboard_double_arrow_down_24"
-        tools:layout_editor_absoluteX="54dp"
-        tools:layout_editor_absoluteY="527dp" />
+        app:layout_constraintTop_toBottomOf="@id/armDownButton"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
         android:id="@+id/armDpad"
@@ -75,52 +89,10 @@
         android:contentDescription="Accessory"
         android:rotation="45"
         android:src="@drawable/ic_outline_front_hand_24"
-        tools:layout_editor_absoluteX="181dp"
-        tools:layout_editor_absoluteY="156dp" />
-
-    <ImageButton
-        android:id="@+id/returnCheckpointButton"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="35dp"
-        android:background="@drawable/roundedbutton_red"
-        android:contentDescription="Return button"
-        android:src="@drawable/ic_baseline_arrow_return_24"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="758dp" />
-
-    <ImageButton
-        android:id="@+id/registerCheckpointButton"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginEnd="35dp"
-        android:background="@drawable/roundedbutton_green"
-        android:contentDescription="Register button"
-        android:src="@drawable/ic_baseline_check_24"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="758dp" />
-
-    <TextView
-        android:id="@+id/returnCheckpointText"
-        android:layout_width="96dp"
-        android:layout_height="31dp"
-        android:text="Return"
-        android:textAlignment="gravity"
-        android:textSize="26sp"
-        android:textStyle="bold"
-        tools:layout_editor_absoluteX="100dp"
-        tools:layout_editor_absoluteY="758dp" />
-
-    <TextView
-        android:id="@+id/registerCheckpointText"
-        android:layout_width="96dp"
-        android:layout_height="31dp"
-        android:text="Register"
-        android:textAlignment="gravity"
-        android:textSize="26sp"
-        android:textStyle="bold"
-        tools:layout_editor_absoluteX="336dp"
-        tools:layout_editor_absoluteY="770dp" />
+        app:layout_constraintTop_toBottomOf="@id/armUpButton"
+        android:layout_marginTop="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
