--- a/app/src/main/res/layout/fragment_gripper_controls.xml
+++ b/app/src/main/res/layout/fragment_gripper_controls.xml
@@ -14,7 +14,7 @@
         android:background="@drawable/roundedbutton_lighter"
         android:contentDescription="@string/down_facing_button"
         android:src="@drawable/ic_baseline_arrow_downward_24"
-        app:layout_constraintTop_toBottomOf="@id/armDpad"
+        app:layout_constraintTop_toBottomOf="@id/gripperButton"
         android:layout_marginTop="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
@@ -32,57 +32,31 @@
         app:layout_constraintRight_toRightOf="parent"/>
 
     <ImageButton
-        android:id="@+id/gripperRightButton"
+        android:id="@+id/armForwardButton"
         android:layout_width="96dp"
         android:layout_height="96dp"
-        android:background="@drawable/roundedbutton_lighter"
-        android:contentDescription="@string/right_facing_button"
-        android:src="@drawable/ic_baseline_arrow_forward_24"
-        app:layout_constraintLeft_toRightOf="@id/armDpad"
+        android:background="@drawable/roundedbutton"
+        android:contentDescription="@string/towards_button"
+        android:src="@drawable/ic_baseline_keyboard_double_arrow_up_24"
+        app:layout_constraintLeft_toRightOf="@id/gripperButton"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/armUpButton" />
 
     <ImageButton
-        android:id="@+id/gripperLeftButton"
+        android:id="@+id/armBackwardButton"
         android:layout_width="96dp"
         android:layout_height="96dp"
-        android:background="@drawable/roundedbutton_lighter"
-        android:contentDescription="@string/left_facing_button"
-        android:src="@drawable/ic_baseline_arrow_back_24"
-        app:layout_constraintRight_toLeftOf="@id/armDpad"
+        android:background="@drawable/roundedbutton"
+        android:contentDescription="@string/awaywards_button"
+        android:src="@drawable/ic_baseline_keyboard_double_arrow_down_24"
+        app:layout_constraintRight_toLeftOf="@id/gripperButton"
         android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/armUpButton" />
 
     <ImageButton
-        android:id="@+id/armForwardButton"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginBottom="30dp"
-        android:layout_marginTop="60dp"
-        android:background="@drawable/roundedbutton"
-        android:contentDescription="@string/towards_button"
-        android:src="@drawable/ic_baseline_keyboard_double_arrow_up_24"
-        app:layout_constraintTop_toBottomOf="@id/armDownButton"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <ImageButton
-        android:id="@+id/armBackwardButton"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginBottom="30dp"
-        android:layout_marginTop="60dp"
-        android:background="@drawable/roundedbutton"
-        android:contentDescription="@string/awaywards_button"
-        android:src="@drawable/ic_baseline_keyboard_double_arrow_down_24"
-        app:layout_constraintTop_toBottomOf="@id/armDownButton"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageButton
-        android:id="@+id/armDpad"
+        android:id="@+id/gripperButton"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:background="@drawable/roundedbutton_focus"
