--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,47 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/tasks_swipe_refresh"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment"
-    android:orientation="vertical">
+    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.home.HomeFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginStart="48dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginBottom="12dp"
-        android:gravity="center">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tasksText"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Tasks"
-            android:textAlignment="gravity"
-            android:textSize="50sp"
-            android:textStyle="bold"
-            android:layout_weight="1" />
+            android:orientation="horizontal"
+            android:layout_marginStart="48dp"
+            android:layout_marginEnd="48dp"
+            android:layout_marginTop="36dp"
+            android:layout_marginBottom="12dp"
+            android:gravity="center">
 
-        <ImageButton
-            android:id="@+id/createTaskButton"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@drawable/roundedbutton"
-            android:contentDescription="Add a task"
-            android:src="@drawable/ic_baseline_add_24" />
+            <TextView
+                android:id="@+id/tasksText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tasks"
+                android:textAlignment="gravity"
+                android:textSize="50sp"
+                android:textStyle="bold"
+                android:layout_weight="1" />
+
+            <ImageButton
+                android:id="@+id/createTaskButton"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/roundedbutton"
+                android:contentDescription="Add a task"
+                android:src="@drawable/ic_baseline_add_24" />
+
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/tasks"
+            android:scrollbars="vertical"
+            android:fadeScrollbars="true"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp" />
 
     </LinearLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/tasks"
-        android:scrollbars="vertical"
-        android:fadeScrollbars="true"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
-
-</LinearLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
